# SNU-AI-Challenge_Ver8_Refactored

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: audit_input.py  bench_3090.py  build_decompose_cache.py  smoke_gpu.py
src/snuai/: __init__.py  model_checks.py  model_config.py  prompting.py
src/snuai/infer/: cascade.py  engine.py  predict.py  scorers.py
src/snuai/train/: qlora.py  train_dpo.py  train_sft.py
tests/: test_model_checks.py  test_model_config.py  test_reranker.py
